[project]
name = "image-data-processing"
version = "0.1.0"
description = ""
authors = [
    {name = "rrxzyy",email = "reikun1207@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "polars (>=1.33.1,<2.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "vega-datasets (>=0.9.0,<0.10.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
